--- a/weather-app/weather-2/src/index.css
+++ b/weather-app/weather-2/src/index.css
@@ -3,9 +3,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Raleway';
   background: linear-gradient(to top,  #74A4BC 0%,#74A4BC 50%, #F2F2F2 50%,#F2F2F2 100%);
-  height: 875px;
+  height: 1200px;
   margin: auto;
   text-align: center;
 }
@@ -18,6 +18,7 @@ body {
   -webkit-animation: pulsate 2s ease-in;
   -webkit-animation-iteration-count: infinite; 
    -webkit-transition: width 2s;
+   margin-top: 50px;
 }
   /* @-webkit-keyframes pulsate {
     
@@ -45,18 +46,19 @@ h2 {
     font-family: 'Raleway';
   font-weight: 200;
   letter-spacing: 10px;
-  line-height: 1.6;
-  font-size: 20px;
+  line-height: 1.4;
+  font-size: 34px;
  
 }
 .home-page{
   width: 630px;
   margin:auto;
+  margin-top: 40px;
 }
 
 h2 .em {
   font-style: italic;
-  font-size: 24px;
+  font-size: 40px;
   font-weight: 300;
 }
 
@@ -163,4 +165,13 @@ form label {
   display: block;
   padding-bottom: 4px;
  
+}
+
+h3 {
+   margin-top: 50px;
+    font-family: 'Raleway';
+  font-weight: 700;
+  letter-spacing: 4px;
+  font-size: 27px;
+  text-transform: uppercase;
 }
