--- a/weather-app/weather-2/src/index.css
+++ b/weather-app/weather-2/src/index.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   font-family: 'Raleway';
   background: linear-gradient(to top,  #74A4BC 0%,#74A4BC 50%, #F2F2F2 50%,#F2F2F2 100%);
-  height: 1200px;
+  height: 1250px;
   margin: auto;
   text-align: center;
 }
@@ -13,12 +13,12 @@ body {
 .logo-div {
   width: 400px;
   margin: auto;
-  margin-top: 20px;
+
    transition: all 0.5s ease;
   -webkit-animation: pulsate 2s ease-in;
   -webkit-animation-iteration-count: infinite; 
    -webkit-transition: width 2s;
-   margin-top: 50px;
+   margin-top: 80px;
 }
   /* @-webkit-keyframes pulsate {
     
@@ -170,8 +170,42 @@ form label {
 h3 {
    margin-top: 50px;
     font-family: 'Raleway';
-  font-weight: 700;
+  font-weight: 500;
   letter-spacing: 4px;
   font-size: 27px;
   text-transform: uppercase;
+}
+
+
+.city-div img {
+  z-index: 1000;
+}
+
+.city-sevenday {
+  font-weight: 600;
+}
+
+.sun {
+  width: 320px;
+  padding:0;
+  margin: 0;
+
+  float: left;
+  padding-left: 40px;
+  position: absolute;
+  z-index: -9900;
+
+}
+.city-div  {
+ margin: auto;
+ margin-top: 64px;
+}
+
+.badgate {
+  
+    font-family: 'Raleway';
+  font-weight: 100;
+  letter-spacing: 4px;
+  font-size: 47px;
+
 }
